design/common.blocks/select/_theme/select_theme_normal.styl
.select_theme_normal
{
    max-width: 100%;

    vertical-align: top;

    .select__button
    {
        width: 100%;

        text-align: left;
        vertical-align: top;

        .button__text
        {
            display: block;

            &:empty:before
            {
                content: '\00a0';
            }
        }

        &.button_size_s .button__text
        {
            padding-right: 27px;
        }

        &.button_size_m .button__text
        {
            padding-right: 28px;
        }

        &.button_size_l .button__text
        {
            padding-right: 32px;
        }

        &.button_size_xl .button__text
        {
            padding-right: 38px;
        }
    }

    .select__tick
    {
        position: absolute;
        top: 0;
        right: 0;

        background-image: url(../../theme/_normal/arrow.svg);

        transition: transform 0.1s ease-out;
    }

    &.select_opened .select__tick
    {
        transform: rotate(-180deg);
    }

    &.select_width_available
    {
        width: 100%;
    }
}

